일단된다 로그인 + 앱 실행시 체크

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Flashcards</string>
+    <string name="web_client_id">834535802922-n32r6na1b4n2pe1fsf4qevfifp8hn6l9.apps.googleusercontent.com</string>
 </resources>
